# ufodeck

./: .coverage  .gitignore  LICENSE.txt  README.md  index.html  pyproject.toml  run.sh  ufodeck.service
kiosk/: __about__.py  __init__.py
src/ufodeck/: api.py  main.py  ufodeck.py
src/ufodeck/scripts/: gpu_attach.sh  gpu_detach.sh  gpu_nvidia.sh  gpu_vfio.sh  net_attach.sh  net_detach.sh  performance.sh  powersave.sh  win11_destroy.sh  win11_start.sh
static/: styles.css
templates/: base.html
