[project]
name = "ufodeck"
description = 'Tool to manage loading OS and visualize OS state.'
license = "MIT"
authors = [
  { name = "larnaa", email = "larnaa@larnaa.pw" },
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/ufodeck/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "fastapi",
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.default.scripts] 
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ufodeck --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/__init__.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
